--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "backend",
+  "name": "shopper",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node Backend/index.js",
+    "dev": "nodemon Backend/index.js",
+    "build":"npm install && npm Install --prefix Frontend && npm run build --prefix Frontend"
   },
   "author": "",
   "license": "ISC",
