--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node Backend/index.js",
     "dev": "nodemon Backend/index.js",
-    "build":"npm install && npm Install --prefix Frontend && npm run build --prefix Frontend"
+    "build":"npm install && npm install --prefix Frontend && npm run build --prefix Frontend"
   },
   "author": "",
   "license": "ISC",
